--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,10 +7,11 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
+		<button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+			<ion-icon [class]="p.icon" item-left></ion-icon>
+			{{p.title}}
+		</button>
+	</ion-list>
   </ion-content>
 
 </ion-menu>
