game and players as popover ready

--- a/src/pages/game/game.scss
+++ b/src/pages/game/game.scss
@@ -1,3 +1,15 @@
 page-game {
+	.col{
+		border: thin solid lightgray;
+		top: 50%;
+	}
 
+	.col img {
+		position:absolute;
+		left: 0;
+		right: 0;
+		margin:0 auto;
+		top:50%;
+		transform:translateY(-50%);
+	}
 }
