--- a/src/pages/statistics/statistics.scss
+++ b/src/pages/statistics/statistics.scss
@@ -1,3 +1,13 @@
 page-statistics {
-
+	.ios, .md {
+		page-home {
+			.scroll-content {
+				background-color: map-get($colors, light);
+			}
+	 
+			ion-card-header {
+				font-weight: bold;
+			}
+		}
+	}
 }
