--- a/src/pages/game/game.scss
+++ b/src/pages/game/game.scss
@@ -12,4 +12,9 @@ page-game {
 		top:50%;
 		transform:translateY(-50%);
 	}
+
+	.blurry-text {
+   		color: transparent;
+   		text-shadow: 0 0 10px rgba(0,0,0,0.4);
+	}
 }
